[package]
name = "gen-poseidon-pse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2_proofs = { git = "https://github.com/privacy-scaling-explorations/halo2.git", tag = "v2023_04_20", default-features = false}
halo2curves = { git = "https://github.com/privacy-scaling-explorations/halo2curves", tag = "0.3.2",  default-features = false }
rand_core = { version =  "0.6.4", features = ["std"]}
snark-verifier = {git = "https://github.com/privacy-scaling-explorations/snark-verifier", feature = ["loader_evm"]}
eth-types = {git = "https://github.com/privacy-scaling-explorations/zkevm-circuits", default-features = false}
primitive-types = "0.12.2"
hex = "0.4.3"
eigentrust-zk = {git = "https://github.com/Liuhaai/zk-eigentrust"}

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"